Sorting out the login/out buttons. Visibility issues with the image I was using and correct hiding

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -73,7 +73,11 @@ a
 #loginbar
     float: right
     padding: 20px
- 
+
+#logoutbar
+    float: right
+    padding: 20px
+	
 #container
     margin: 20px auto
     width: 70%
